--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   },
   "homepage": "https://github.com/asaks84/todo-list#readme",
   "dependencies": {
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
+    "date-fns": "^3.4.0",
+    "flatpickr": "^4.6.13",
     "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.8.0"
+    "imask": "^7.5.0",
+    "mini-css-extract-plugin": "^2.8.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "css-loader": "^6.10.0",
+    "date-fns": "^3.4.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
